# soundstream

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  inference-requirements.txt  inference.ipynb  pyproject.toml  train.py  upload.py
src/configs/: train.yaml
src/configs/dataloader/: basic.yaml  example.yaml
src/configs/datasets/: librispeech.yaml  onebatchtest.yaml
src/configs/metrics/: audio.yaml
src/configs/model/: soundstream.yaml
src/configs/transforms/: basic.yaml
src/configs/transforms/batch_transforms/: none.yaml
src/configs/transforms/instance_transforms/: basic.yaml
src/configs/writer/: cometml.yaml  wandb.yaml
src/datasets/: data_utils.py  librispeech.py
src/logger/: utils.py
src/loss/: adversarial.py  commitment.py  reconstruction.py  ssloss.py
src/metrics/: base_metric.py  nisqa.py  stoi.py  tracker.py
src/model/: components.py  decoder.py  encoder.py  quant.py  soundstream.py
src/model/discriminators/: stft.py  wave.py
src/trainer/: base_trainer.py  trainer.py
src/transforms/wav_augs/: crop.py  gain.py
