[project]
name = "soundstream"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "comet-ml>=3.57.4",
    "datasets>=4.8.5",
    "hydra-core>=1.3.2",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "omegaconf>=2.3.0",
    "pandas>=3.0.2",
    "pillow>=12.2.0",
    "torch>=2.11.0",
    "torch-audiomentations>=0.12.0",
    "torchaudio>=2.11.0",
    "torchvision>=0.26.0",
    "tqdm>=4.67.3",
    "wandb>=0.26.1",
    "wget>=3.2",
]

[dependency-groups]
dev = [
    "ptipython>=1.0.1",
]
